k8s/backend-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netflix-backend
  namespace: netflix
spec:
  replicas: 2
  selector:
    matchLabels:
      app: netflix-backend
  template:
    metadata:
      labels:
        app: netflix-backend
    spec:
      containers:
      - name: backend
        image: manish857/netflix-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
