k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netflix-clone
spec:
  replicas: 2
  selector:
    matchLabels:
      app: netflix
  template:
    metadata:
      labels:
        app: netflix
    spec:
      containers:
        - name: netflix
          image: manish857/netflix-clone:latest
          ports:
            - containerPort: 3000
