k8s/frontend-development.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netflix-frontend
  namespace: netflix
spec:
  replicas: 2
  selector:
    matchLabels:
      app: netflix-frontend
  template:
    metadata:
      labels:
        app: netflix-frontend
    spec:
      containers:
      - name: frontend
        image: manish857/netflix-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
