k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netflix-clone-service
spec:
  selector:
    app: netflix
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: LoadBalancer
